# groff

./: .gitignore  BUG-REPORT  CHANGES  ChangeLog  ChangeLog.115  ChangeLog.116  ChangeLog.117  ChangeLog.118  ChangeLog.119  ChangeLog.120  ChangeLog.121  FDL  FOR-RELEASE  INSTALL  INSTALL.CVS  INSTALL.REPO  INSTALL.extra  INSTALL.gen  LICENSE  LICENSES  MANIFEST  MORE.STUFF  Makefile  Makefile.am  Makefile.bd  Makefile.ccpg  Makefile.comm  Makefile.cpg  Makefile.dev  Makefile.in  Makefile.init  Makefile.lib  Makefile.man  Makefile.sub  NEWS  PROBLEMS  PROJECTS  README  README.CVS  README.MinGW  (+24 more)
arch/djgpp/: README  config.bat  config.sed  config.site  t-groff.bat
arch/mingw/: Makefile.sub  grap2graph.cmd  grog.cmd  mingw.am  neqn.cmd  pdfmom.cmd  zzz
arch/misc/: .cvsignore  Makefile.sub  misc.am  shdeps.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
contrib/RUNOFF/: ChangeLog  Makefile.sub  groff_filenames.man  runoff.man
contrib/chem/: .cvsignore  ChangeLog  Makefile.sub  README.txt  chem.am  chem.man  chem.man1  chem.pic  chem.pl  macros.pic
contrib/eqn2graph/: .cvsignore  Makefile.sub  eqn2graph.am  eqn2graph.man  eqn2graph.sh
contrib/gdiffmk/: .cvsignore  .gitignore  ChangeLog  Makefile.sub  README  gdiffmk.am  gdiffmk.man  gdiffmk.sh
contrib/gideal/: ChangeLog  Makefile.sub  gideal.am  gideal.man  gideal.pl  ideal.man  ideal.man.xml
contrib/glilypond/: ChangeLog  ChangeLog.0x  Makefile.sub  README.txt  args.pl  glilypond.am  glilypond.man  glilypond.pl  oop_fh.pl  perl_test.pl  subs.pl
contrib/gperl/: ChangeLog  Makefile.sub  gperl.am  gperl.man  gperl.pl
contrib/gpinyin/: ChangeLog  Makefile.sub  gpinyin.am  gpinyin.man  gpinyin.pl  sub.pl  subs.pl
contrib/grap2graph/: .cvsignore  Makefile.sub  grap2graph.am  grap2graph.man  grap2graph.sh
devps/: psstrip.sed
doc/: .cvsignore  .gitignore  Makefile  Makefile.in  Makefile.sub  automake.mom  chars.tr  doc.am  fdl.texi  fixinfo.sh  gnu.xpm  groff.css  groff.texi  groff.texinfo  homepage.ms  meintro.me  pic.ms  texinfo.tex  txi-en.tex  webpage.ms
driver/: Makefile  driver.h  input.c  printer.c  printer.h
dvi/: Makefile  dvi.c  tfmtodit.c
eqn/: Makefile  Makefile.sub  box.c  box.cc  box.h  delim.c  eqn.cc  eqn.h  eqn.tab.c  eqn.y  lex.c  limit.c  list.c  main.c  mark.c  other.c  over.c  pbox.h  pile.c  script.c  special.c  sqrt.c  text.c
etc/: Makefile  addftinfo.c  grog.pl  grog.sh  guess.c  guess.h  soelim.c
groff/: groff.cc
grog/: Makefile.sub
grops/: ps.cc
grotty/: tty.cc
include/: lib.h
indxbib/: indxbib.man
lib/: Makefile  assert.c  assert.h  change_lf.c  cmap.c  cmap.h  cset.c  cset.h  errarg.c  errarg.h  error.c  error.h  fatal.c  fmod.c  font.c  font.h  fontfile.c  getcwd.c  iftoa.c  itoa.c  lf.c  lib.h  matherr.c  nametoindex.c  new.c  ptable.c  ptable.h  strerror.c  string.c  strsave.c  strtol.c  tmpfile.c
m4/: codeset.m4  fcntl-o.m4  glibc21.m4  groff.m4  iconv.m4  lib-ld.m4  lib-prefix.m4  localcharset.m4
macros/: Makefile  tmac.an  tmac.andoc  tmac.doc  tmac.e  tmac.s
man/: .cvsignore  Makefile  Makefile.sub  addftinfo.man  afmtodit.man  ditroff.man  geqn.man  gindxbib.man  glookbib.man  gpic.man  grefer.man  grodvi.man  groff.man  groff_char.man  groff_diff.man  groff_differences.man  groff_font.man  groff_me.man  groff_ms.man  groff_out.man  groff_tmac.man  grog.man  grops.man  grotty.man  gsoelim.man  gtbl.man  gtroff.man  lkbib.man  man.am  mdate.sh  pfbtops.man  psbb.man  roff.man  tfmtodit.man
mm/: ChangeLog  Makefile  Makefile.sub  README  groff_mm.man  groff_mmse.man  tmac.m  tmac.mse
nroff/: Makefile.sub  nroff.man  nroff.sh
pic/: Makefile  TODO  common.c  common.h  lex.c  lex.cc  main.c  make-dos-dist  object.c  object.h  output.h  pic.cc  pic.tab.c  pic.tab.h  pic.y  position.h  tex.c  troff.c
ps/: Makefile  TODO  pfbtops.c  ps.c  ps.h  psbb.c  psfig.diff  psrm.c  tmac.ps  tmac.psatk
refer/: Makefile  TODO  command.c  command.h  common.c  dirnamemax.c  genlimits.c  index.c  index.h  indxbib.c  label.cc  label.tab.c  label.y  linear.c  lkbib.c  lookbib.c  ref.c  ref.h  refer.c  refer.h  refid.h  search.c  search.h  token.c  token.h
src/libs/gnulib/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/libs/gnulib/build-aux/: compile  config.guess  config.sub  depcomp  missing
src/libs/gnulib/build-aux/snippet/: .cvsignore  warn-on-use.h
src/libs/gnulib/lib/: Makefile.am  Makefile.in  config.charset  intprops.h  inttypes.in.h  localcharset.c  localcharset.h  ref-add.sin  ref-del.sin  stdbool.in.h  stdint.in.h  streq.h  unitypes.in.h  uniwidth.in.h  verify.h  wctype-h.c  wctype.in.h  wcwidth.c
src/libs/gnulib/lib/uniwidth/: cjk.h  width.c
src/libs/gnulib/m4/: .cvsignore  Makefile.am  Makefile.in  codeset.m4  configmake.m4  extensions.m4  extern-inline.m4  fcntl-o.m4  glibc21.m4  gnulib-cache.m4  gnulib-comp.m4  gnulib-tool.m4  include_next.m4  inttypes-pri.m4  inttypes.m4  localcharset.m4  longlong.m4  onceonly.m4  wchar_t.m4  wint_t.m4
tbl/: Makefile  main.c  main.cc  table.c  table.cc  table.h  tbl.man
tmac/: .cvsignore  .gitignore  62bit.tmac  Makefile.sub  README  TESTING-HINTS  X.tmac  Xps.tmac  an-ext.tmac  an-old.tmac  andoc.tmac  arkup.tmac  color-html.tmac  color.tmac  composite.tmac  cp1047.tmac  cs.tmac  de.tmac  den.tmac  devtag.tmac  doc-common  doc-common-u  doc-common.new  doc-ditroff  doc-ditroff-u  doc-ditroff.new  doc-nroff  doc-nroff.new  doc-syms  doc-syms-u  doc-syms.new  doc.tmac  doc.tmac-u  dvi.tmac  e.tmac  e.tmac-u  ec.tmac  eqnrc  europs.tmac  fallbacks.tmac  (+66 more)
troff/: Makefile  TODO  charinfo.h  column.c  dictionary.c  dictionary.h  div.c  div.cc  div.h  env.c  env.cc  env.h  hvunits.h  input.c  input.cc  node.c  node.cc  node.h  number.c  reg.c  reg.h  request.h  symbol.c  symbol.h  token.h  troff.h  troff.man
tty/: Makefile  tmac.tty  tty.c
xditview/: ChangeLog  DESC  Dvi.c  DviChar.c  DviP.h  FontMap  GXditview.ad  Imakefile  Makefile  README  TODO  device.c  draw.c  font.c  gxditview.man  lex.c  page.c  parse.c  path.h  tmac.X  tmac.Xps  xditview.c  xtotroff.c
(+1066 files in other folders)
