## Process this file with automake to produce Makefile.in.

# Makefile.am

# Copyright (C) 1994-2014  Free Software Foundation, Inc.

# This file is free software; the Free Software Foundation gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.

# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even
# the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.

AUTOMAKE_OPTIONS = 1.5 foreign

SUBDIRS = lib m4

ACLOCAL_AMFLAGS = -I m4
